Create js scripts with GET and DELETE requests and admin_page
Signed-off-by: Daniil Nizovkin <dan_nizovkin_kungur@mail.ru>

--- a/lab4/css/main.css
+++ b/lab4/css/main.css
@@ -1,3 +1,10 @@
 .paragraph {
     word-wrap: break-word;
 }
+
+.formms {
+    width: 100%;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-top: auto;
+}
